--- a/filmo.csproj
+++ b/filmo.csproj
@@ -157,6 +157,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Layouts\_LayoutB.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\parts\_PartialFooter.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
